assets/manifests/group_ingress_manager/ip_route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ${ROUTE_NAME}
  namespace: ${IP_NS}
  labels:
    ech.bz/managed-by: group-ingress-manager
    ech.bz/ingress-group: "${GROUP}"
    ech.bz/route-kind: ip-path
  annotations:
    kubernetes.io/ingress.class: "${CLASS}"
    ech.bz/path-prefix: "${PATH_PREFIX}"
    ech.bz/path-prefix-hash: "${PATH_PREFIX_HASH}"
    ech.bz/node-name: "${NODE_NAME}"
    ech.bz/node-ip: "${NODE_IP}"
spec:
  entryPoints:
    - websecure
  routes:
    - match: PathPrefix(`$PATH_PREFIX`)
      kind: Rule
      priority: ${ROUTE_PRIORITY}
      services:
        - name: ${SERVICE_NAME}
          namespace: ${SERVICE_NAMESPACE}
          port: ${SERVICE_PORT}
  tls: {}
